sort imgages replaced & news scrollbar fix

--- a/css/main-main.css
+++ b/css/main-main.css
@@ -32,7 +32,6 @@
     flex-direction: column;
     border-top: #24282F solid 1px;
     flex-shrink: 0;
-    overflow-y: auto;
     gap: 20px;
     padding: 10px;
     color: #c7d5e0;
@@ -44,7 +43,7 @@
     flex-direction: row;
     gap: 20px;
     padding-left: 10px;
-    margin-top: 20px;
+    overflow-y: auto;
 }
 
 
@@ -62,7 +61,6 @@
     font-size: 18px;
     font-weight: bold;
     padding-left: 10px;
-    position: absolute;
 }
 
 
@@ -79,24 +77,25 @@
 }
 
 
-.content-news:hover {
+.news-cardss:hover {
     scrollbar-color: #555 transparent;
 }
 
-.content-news::-webkit-scrollbar {
-    width: 4px;
+.news-cards::-webkit-scrollbar {
+    width: 2px;
+    height: 6px;
 }
 
-.content-news::-webkit-scrollbar-track {
+.news-cards::-webkit-scrollbar-track {
     background: transparent;
 }
 
-.content-news::-webkit-scrollbar-thumb {
+.news-cards::-webkit-scrollbar-thumb {
     background: transparent;
     border-radius: 10px;
 }
 
-.content-news:hover::-webkit-scrollbar-thumb {
+.news-cards:hover::-webkit-scrollbar-thumb {
     background: #555;
 }
 
